implement simple task that adds 2 numbers and gets result
