# openapi.yml
@@ -51,12 +51,35 @@ paths:
       operationId: gcpdac.celerycheck.add_together
       tags:
         - celerycheck
-      summary: check celery
-      description: Create solution in more detail - TODO
+      summary: call celery task
+      description: Call celery task
       responses:
         '200':
-          description: successfully run celery task
+          description: successfully call celery task
 
+  "/celerycheck/{taskid}":
+    get:
+      operationId: gcpdac.celerycheck.add_together_result
+      tags:
+        - celerycheck
+      summary: get celery result
+      description:  get celery result
+      parameters:
+        - name: taskid
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successfully got result
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  sum:
+                    type: string
 servers:
   - url: /api
 components:
